--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:8.0.2'
     // Cloud Firestore
     implementation 'com.google.firebase:firebase-firestore-ktx'
+    // Realtime Database
+    implementation 'com.google.firebase:firebase-database-ktx'
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.14.2'
