--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx'
     // Realtime Database
     implementation 'com.google.firebase:firebase-database-ktx'
+    // Cloud Messaging
+    implementation 'com.google.firebase:firebase-messaging-ktx'
+
+    //Preferences
+    implementation 'androidx.preference:preference:1.2.0'
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.14.2'
