--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,7 +59,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging-ktx'
 
     //Preferences
-    implementation 'androidx.preference:preference:1.2.0'
+    implementation 'androidx.preference:preference:1.1.0-alpha04'
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.14.2'
