--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-database-ktx'
     // Cloud Messaging
     implementation 'com.google.firebase:firebase-messaging-ktx'
+    // Analytics
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 
     //Preferences
     implementation 'androidx.preference:preference:1.1.0-alpha04'
