--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging-ktx'
     // Analytics
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    // Facebook
+    implementation 'com.facebook.android:facebook-login:15.0.1'
 
     //Preferences
     implementation 'androidx.preference:preference:1.1.0-alpha04'
