--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     // Facebook
     implementation 'com.facebook.android:facebook-login:15.0.1'
+    // Cloud Storage
+    implementation 'com.google.firebase:firebase-storage-ktx'
 
     //Preferences
     implementation 'androidx.preference:preference:1.1.0-alpha04'
