--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,9 @@
         android:theme="@style/Theme.MyClient"
         tools:targetApi="31">
         <activity
-            android:name=".SettingsActivity"
-            android:exported="false">
+            android:name=".settings.SettingsActivity"
+            android:exported="false"
+            android:theme="@style/PreferencesTheme">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
