--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,8 @@ dependencies {
     implementation 'com.facebook.android:facebook-login:15.0.1'
     // Cloud Storage
     implementation 'com.google.firebase:firebase-storage-ktx'
+    // FirebaseUI for Cloud Storage
+    implementation 'com.firebaseui:firebase-ui-storage:8.0.2'
 
     //Preferences
     implementation 'androidx.preference:preference:1.1.0-alpha04'
